--- a/part7/extended-bloglist/package.json
+++ b/part7/extended-bloglist/package.json
@@ -6,6 +6,7 @@
     "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/user-event": "^14.1.1",
     "axios": "^0.27.2",
+    "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
